@@ -1,21 +1,42 @@
-One CrashPlan feature that Duplicati could not replicate was coordinated email status reporting. CrashPlan had a really nice feature whereby it would gather up the current backup status for all your systems and mail you a consolidated report on a periodic basis. It was a great way to make sure all your backups were current and to notify you if something was wrong. 
+One CrashPlan feature that Duplicati could not replicate was coordinated email status reporting. 
+CrashPlan had a really nice feature whereby it would gather up the current backup status for all 
+your systems and mail you a consolidated report on a periodic basis. It was a great way to make 
+sure all your backups were current and to notify you if something was wrong. 
  
-Duplicati has no such capability. You can configure it to send you email when backup jobs completed, but you get a separate email for each backup job that runs. In the configuration I have (9 systems backing up to 2 different storage services in various combinations) that's 14 different emails per day. Compare that with CrashPlan's one summary email per day and you can see how this was a problem. Others on the Duplicati discussion forum noticed it, too. That started me thinking about developing a tool to provide summarized email notification for Duplicati users. 
+Duplicati has no such capability. You can configure it to send you email when backup jobs completed, 
+but you get a separate email for each backup job that runs. In the configuration I have (9 systems 
+backing up to 2 different storage services in various combinations) that's 14 different emails per day. 
+Compare that with CrashPlan's one summary email per day and you can see how this was a problem. Others 
+on the Duplicati discussion forum noticed it, too. That started me thinking about developing a tool to 
+provide summarized email notification for Duplicati users. 
  
 dupReport was born. 
  
 Source-Destination Pairs
 ------------------------
-dupReport identifies backup jobs as a series of Source/Destination pairs. Source/Destination pairs are specified in dupReport in the following format:
+dupReport identifies backup jobs as a series of Source/Destination pairs.
+
+dupReport uses Source-Destination Pairs to display each source job and target storage separate.
+The default dupReport configuration requires that jobs be named in a way that indicates what is protected,
+and where it is going.
+For instance, a job named "Fred_Home_Desktop-Homers_Minio" would show up in the dupReport as:
+***** Fred_Home_Desktop to Homers_Minio *****
+
+Note that spaces in job names are not supported, at least by the default pattern matching.
+
+Source/Destination pairs are specified in dupReport in the following format:
  
 <Source><delimiter><Destination>
  
 Where:
 <Source> is a series of alphanumeric characters
-<delimiter> is a single character (typically one of the "special" characters) and CAN NOT be a character you use in any of your Source/Destination pairs
+<delimiter> is a single character (typically one of the "special" characters) and CAN NOT be 
+a character you use in any of your Source/Destination pairs
 <Destination> is a series of alphanumeric characters
  
-dupReport allows you to define the specification of the Source, Destination, and Delimiter in the dupReport.rc file in the [main] section. Each specification is the regular expression definition of that element. The defaults are:
+dupReport allows you to define the specification of the Source, Destination, and Delimiter in the 
+dupReport.rc file in the [main] section. Each specification is the regular expression definition of 
+that element. The defaults are:
  
 [main]
 srcregex=\w*
@@ -26,24 +47,37 @@ Together the full source/destination regex is:
 
 <srcregex><srcdestdelimiter><destregex>
  
-You can modify the specification of these elements by replacing each with a regular expression defining how dupReport can find that element in a email's subject line.
+You can modify the specification of these elements by replacing each with a regular expression 
+defining how dupReport can find that element in a email's subject line.
  
-WARNING! dupReport relies on the Source/Destination pair format for all of its operations. If you do not properly specify your Source/Destination pair formats in both the program (through the .rc file) and in Duplicati (through proper job naming) none of this will work for you. That will make us both very sad. :-(
+WARNING! dupReport relies on the Source/Destination pair format for all of its operations. 
+If you do not properly specify your Source/Destination pair formats in both the program (through 
+the .rc file) and in Duplicati (through proper job naming) none of this will work for you. That will make us both very sad. :-(
 
 Identifying Emails of Interest
 ------------------------------
-dupReport scans the identified mailbox looking for backup job emails. However, there may be hundreds (or thousands) of emails in the inbox, only a few of which contain information about Duplicati backup jobs. dupReport identifies "Emails of Interest" by matching the email's subject line against a pattern defined in the dupReport.rc file. If the pattern matches, the email is analyzed. If the pattern does not match, the email is ignored.
+dupReport scans the identified mailbox looking for backup job emails. However, there may be hundreds
+(or thousands) of emails in the inbox, only a few of which contain information about Duplicati backup
+jobs. dupReport identifies "Emails of Interest" by matching the email's subject line against a pattern
+defined in the dupReport.rc file. If the pattern matches, the email is analyzed. If the pattern does
+not match, the email is ignored.
  
-The default pattern it looks for is the phrase "Duplicati backup report for" which is the default used for Duplicati's send-mail-subject advanced option. You can change the text that dupReport scans by adjusting the subjectregex parameter in the dupReport.rc file in the [main] section. subjectregex is the regular expression definition for the desired phrase. The default for this specification is:
+The default pattern it looks for is the phrase "Duplicati backup report for" which is the default used 
+for Duplicati's send-mail-subject advanced option. You can change the text that dupReport scans by 
+adjusting the subjectregex parameter in the dupReport.rc file in the [main] section. subjectregex is 
+the regular expression definition for the desired phrase. The default for this specification is:
  
 [main]
 subjectregex=^Duplicati Backup report for
  
-If you change the subjectregex parameter, be sure that it will match the text specified in the Duplicati send-mail-subject advanced option.
+If you change the subjectregex parameter, be sure that it will match the text specified in the Duplicati 
+send-mail-subject advanced option.
 
 System Requirements
 -------------------
-dupReport has been tested on Linux (Debian 8) and Windows 10. It comes as a single Python script so it should be portable on any number of other environments. The only other software dupReport needs is Python3. Installation instructions for Python are beyond our scope here, but instructions are readily available on the Internet.
+dupReport has been tested on Linux (Debian 8) and Windows 10. It comes as a single Python script so it 
+should be portable on any number of other environments. The only other software dupReport needs is Python3. 
+Installation instructions for Python are beyond our scope here, but instructions are readily available on the Internet.
 
 Installing dupReport 
 --------------------
@@ -56,7 +90,8 @@ Create and initialize the dupReport database (dupReport.db)
 Create a default configuration file (dupReport.rc)
 Both of these files will be created in the same directory where the dupReport.py script is located. 
 
-Edit the dupReport.rc file and change any desired parameters. The default dupReport.rc file contains explanations for each of the parameters to help you make any changes. Save the file when complete.
+Edit the dupReport.rc file and change any desired parameters. The default dupReport.rc file contains 
+explanations for each of the parameters to help you make any changes. Save the file when complete.
 
 To run the program simply enter "dupReport.py" at the command prompt, plus any options you may want to add.
  
@@ -74,7 +109,8 @@ dupReport has the following command line options:
 
 -V, --version (dupReport program and database version info.)
 
--l LOGPATH, --logpath LOGPATH (Define directory for dupReport.log file. Default is directory where dupReport.py program is located. Same as [main]logpath= in rc file.)
+-l LOGPATH, --logpath LOGPATH (Define directory for dupReport.log file. Default is directory where dupReport.py 
+   program is located. Same as [main]logpath= in rc file.)
 
 -a, --append  (Append new logs to log file. Same as [main]logappend= in rc file.)
 
@@ -86,11 +122,13 @@ dupReport has the following command line options:
 
 -t, --report (Run summary report only. Don't collect emails. -c and -t options can not be used together.)
 
-Many command line options have equivalent options in the dupReport.rc file. If an option is specified on both the command line and the .rc file, the command line option takes precedence.
+Many command line options have equivalent options in the dupReport.rc file. If an option is specified on 
+both the command line and the .rc file, the command line option takes precedence.
 
 dupReport.rc Configuration
 --------------------------
-The dupReport.RC file contains configuration information for dupReport to run properly. Here is a sample dupReport.rc file with annotations to help you understand the various options
+The dupReport.RC file contains configuration information for dupReport to run properly. Here is a sample 
+dupReport.rc file with annotations to help you understand the various options
 
 ### dupReport.rc
 # Configuration file for dupReport
@@ -135,6 +173,15 @@ srcdestdelimiter=-
 # Email Display Table Options
 border=1
 padding=5
+
+# Report section display. Indicate whether or not to display Errors,
+# Warnings, and/or Messages in reports. All options here are true/fales
+disperrors=true
+dispwarnings=true
+dispmessages=false
+
+# Sort email report by source or by destination.
+sortorder=source
 
 # [incoming] section contains parameters for 
 # incoming (downloaded) email. 
