@@ -1,6 +1,11 @@
 2.0.3
 -----
+Issue #1 - Any change to RC file or database initialization causes DR to exit with status 1
+Issue #7 - Fixed the way failed backup jobs are parsed & reported.
 Issue #8 - Flush file buffer after every log write
+Issue #10 - Sort report by source or destination
+
+
 
 2.0.2
 -----
